--- a/index-jp.html
+++ b/index-jp.html
@@ -149,23 +149,23 @@
 
         <section>
           <h2><u>オープンな</u>CA</h2>
-          <p>Let's Encryptが使ってるすべてのツール・ソフトウェアはオープンソース:</p>
+          <p>Let's Encryptが使ってる<br>すべてのツール・ソフトウェアはオープンソース:</p>
           <ul>
 						<li><a href="https://github.com/letsencrypt/boulder/">証明局</a>のサーバ実装</li>
             <li><a href="https://github.com/letsencrypt/letsencrypt/">証明書を取得する</a>ためのクライアント</li>
             <li><a href="https://github.com/bifurcation/letsencrypt-overview/">このプレゼンテーション</a>もオープンソース</li>
           </ul>
           <p><br></p>
-          <h2>Pull requestをお待ちしています!</h2>
+          <h2>Pull request<br>お待ちしています!</h2>
         </section>
 
 				<section>
 	        <section>
 	          <h2><u>協同的な</u>CA</h2>
 	          <ul>
-							<li>Let's Encryptで使用している<a href="https://tools.ietf.org/wg/acme/">ACMEプロトコル</a>はIETFで標準化されている。
+							<li>Let's Encryptで使用している<a href="https://tools.ietf.org/wg/acme/">ACMEプロトコル</a>は<br>IETFで標準化されている。
 								つまりすべてのCAで使える。</li>
-	            <li>すべてオープンな<a href="https://community.letsencrypt.org/">コミュニティシステム</a>によるユーザーサポート</li>
+	            <li>オープンな<a href="https://community.letsencrypt.org/">コミュニティシステム</a>による<br>ユーザーサポート</li>
 	          </ul>
 	        </section>
 					<section>
